--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-creative-portfolio-theme"]
     path = themes/hugo-creative-portfolio-theme
-    url = https://rahulmopkar:${GIT_PASSWORD}@git@github.com:rahulmopkar/techedforkids2.git
+    url = https://github.com/rahulmopkar/techedforkids2.git
